1. store long and short fragments in separate files 2. new paired kmer extension algorithm